packages/client/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_NAME-client
  labels:
    maintainer: ${GITLAB_USER_LOGIN}
    app: $CI_PROJECT_NAME-client
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME-client
  replicas: 1
  template:
    metadata:
      labels:
        maintainer: ${GITLAB_USER_LOGIN}
        app: $CI_PROJECT_NAME-client
    spec:
      containers:
        - name: ${CI_PROJECT_NAME}-client
          image: ${CONTAINER_TAGGED_IMAGE}-client
          ports:
            - containerPort: ${APP_PORT}
#              containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz/
              port: ${APP_PORT}
#              port: 80
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
      imagePullSecrets:
        - name: harbor
