packages/client/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}_CLIENT
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: ${APP_PORT}
      targetPort: ${APP_PORT}
  selector:
    app: ${CI_PROJECT_NAME}_CLIENT
